# TinyExpr_Android_To_KMP

./: .gitmodules  README.MD  build.gradle  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/adman/kmp/tiny/expr/: ExampleInstrumentedTest.kt
app/src/debug/java/org/adman/kmp/tiny/expr/ui/: GreetingPreview.kt
app/src/main/java/org/adman/kmp/tiny/expr/: App.kt  MainActivity.kt
app/src/main/java/org/adman/kmp/tiny/expr/component/: Greeting.kt
app/src/main/java/org/adman/kmp/tiny/expr/theme/: Theme.kt  Type.kt
app/src/test/java/org/adman/kmp/tiny/expr/: ExampleUnitTest.kt
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/jni/: CMakeLists.txt
composeApp/src/androidMain/res/values/: themes.xml
composeApp/src/androidUnitTest/kotlin/org/adman/kmp/tiny/shared/: ExampleUnitTest.kt
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/kotlin/org/adman/kmp/tiny/expr/theme/: Color.kt
desktop/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp.xcodeproj/project.xcworkspace/xcuserdata/neo.chang.xcuserdatad/: UserInterfaceState.xcuserstate
shared/: build.gradle.kts
shared/native/: CMakeLists.txt  tinyexpr_jni.c
shared/src/androidMain/jni/: CMakeLists.txt
shared/src/androidMain/kotlin/org/adman/kmp/tiny/expr/: Platform.android..kt  Platform.android.kt
shared/src/androidTest/kotlin/org/adman/kmp/tiny/shared/: ExampleInstrumentedTest.kt
shared/src/commonMain/kotlin/org/adman/kmp/tiny/expr/: App.kt  Platform.kt
shared/src/commonMain/kotlin/org/adman/kmp/tiny/expr/component/: Greeting.kt
shared/src/commonMain/kotlin/org/adman/kmp/tiny/expr/theme/: Theme.kt
shared/src/commonTest/kotlin/org/adman/kmp/tiny/shared/: GrepTest.kt
shared/src/desktopMain/jni/: CMakeLists.txt
shared/src/desktopMain/kotlin/org/adman/kmp/tiny/expr/: Platform.jvm.kt
shared/src/iosMain/kotlin/org/adman/kmp/tiny/expr/: Platform.ios.kt
shared/src/iosMain/native/: CMakeLists.txt
shared/src/main/jni/: CMakeLists.txt
shared/src/main/kotlin/org/adman/kmp/tiny/expr/: AndroidPlatform.kt  App.kt  Platform.kt
